--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,10 +12,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
           node-version: 16
+          
       - run: npm ci
 
       - name: Publish
